Fixed sidenav covering content

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ menu {
 .wrapper {
     display: flex;
     overflow-x: hidden;
+    min-height: 100vh;
 }
 
 .right-gutter {
@@ -153,9 +154,13 @@ main {
     height: 100%;
 }
 
-.sidenav {
+.left-gutter {
     min-width: var(--sidebar-width);
-    box-shadow: var(--shadow-0-0-4);
+}
+
+.sidenav {
+    position: absolute;
+    z-index: 90000;
     padding: 0;
     align-content: space-between;
 }
@@ -163,13 +168,18 @@ main {
 .sidenav .nav-body {
     background-color: var(--color-navbar-bg);
     transition: transform 0.3s ease;
-    transform: translateX(-0px);
+    transform: translateX(-250px);
+    box-shadow: var(--shadow-0-0-4);
 }
 
 @media (max-width: 1249px) {
-    .sidenav,
+    .left-gutter,
     .right-gutter {
         display: none;
+    }
+
+    .sidenav .nav-body {
+        transform: translateX(calc(-1 * var(--sidebar-width)) );
     }
 }
 
@@ -302,39 +312,12 @@ body,
 
 .page-header {
     font-size: 5rem;
-    text-align: center;
     margin-bottom: 0;
 }
 
-.page-info-icon {
-    font-size: 2em;
-    position: absolute;
-    right: 0;
-}
+.page-info strong {
+    color: deepskyblue;
 
-.page-info-icon:hover {
-    cursor: pointer;
-    filter: brightness(0.6);
-}
-
-.page-info {
-    position: absolute;
-    z-index: 90000;
-    background-color: #282633;
-    padding: 2rem;
-    border-radius: 0.75rem;
-    box-shadow: var(--shadow-0-0-4);
-    width: auto;
-    max-width: 80%;
-    right: 2.2em;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.25s ease;
-}
-
-.page-info-icon:hover + .page-info {
-    visibility: visible;
-    opacity: 1;
 }
 
 .tooltip {
@@ -379,13 +362,11 @@ body,
     display: block;
 }
 
-.sidenav i {
+.sidenav .nav-item i {
     width: 25px;
     text-align: center;
     margin-right: 3px;
 }
-
-
 
 .sidenav .nav-contents {
     padding: 3rem 3rem 0 3rem;
@@ -410,11 +391,6 @@ body,
     border-radius: 0.75rem;
     padding: 0 0 0 0;
     transition: background 125ms ease, padding 125ms ease, color 125ms ease;
-}
-
-.sidenav .nav-item:focus-within {
-    background-color: #282633 !important;
-    padding: 0 0 0 5px;
 }
 
 .sidenav .nav-item:hover {
@@ -477,6 +453,7 @@ body,
     width: 190px;
     object-fit: none;
     transition: color 125ms ease;
+    cursor: pointer;
 }
 
 .navbar-brand:hover {
@@ -513,25 +490,108 @@ body,
     transition: opacity 0.3s ease-in-out;
 }
 
-.nav-open .nav-backdrop {
+#nav-toggler:checked ~ .nav-backdrop {
     visibility: visible;
     opacity: 0.4;
 }
 
 #nav-toggler {
-    padding: 0.5rem 1.5rem;
-    font-size: 2em;
-    color: var(--color-turquoise) !important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: var(--color-navbar-bg);
-    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    display: none;
 }
 
-.nav-open {
-    width: 250px !important;
+#nav-toggler+label {
+    padding: 1.4rem;
+    height: 56px;
+    position: fixed;
+    z-index: 90000;
+    top: 0;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    background: var(--color-container-accent-light);
+    display: flex;
+    color: var(--color-tier-s);
+    backdrop-filter: blur(5px);
+    box-shadow: var(--shadow-0-0-4);
 }
+
+
+#nav-toggler+label i {
+    position: relative;
+    top: -50%;
+}
+
+#nav-toggler+label h1 {
+    font-size: 2.6rem;
+}
+
+#nav-toggler:checked+label {
+    transform: translateX(190px);
+    background: none;
+    box-shadow: none;
+}
+
+#nav-toggler:checked+label h1 {
+    display: none;
+}
+
+
+@media (min-width: 1250px) {
+    #nav-toggler+label, .nav-backdrop {
+        display: none;
+    }
+    .sidenav .nav-body {
+        transform: translateX(0);
+    }
+}
+
+#nav-toggler:checked ~ .nav-body {
+    transform: translateX(0px);
+}
+
+.toggler-lines, 
+.toggler-lines::before, 
+.toggler-lines::after {
+    --height: 4px;
+    content: '';
+    width: 30px;
+    height: var(--height);
+    background-color: var(--color-tier-s);
+    display: block;
+    border-radius: 10px;
+    transform: 
+        translateY(var(--translate, 0))
+        rotateZ(var(--rotate, 0));
+    transition: 
+        transform 0.35s cubic-bezier(.77,.2,.05,1),
+        opacity 0.35s cubic-bezier(.77,.2,.05,1),
+        background 0.35s cubic-bezier(.77,.2,.05,1);
+}
+.toggler-lines::before {
+    --translate: calc(var(--height) * 3);
+}
+.toggler-lines::after {
+    --translate: calc(var(--height) * 5);
+}
+
+#nav-toggler:checked + label .toggler-lines {
+    --rotate: 45deg;
+    --translate: calc(var(--height) * 2);
+    background-color: var(--color-turquoise);
+}
+
+#nav-toggler:checked + label .toggler-lines::before {
+    --rotate: -45deg;
+    --translate: 0;
+    opacity: 0;
+}
+
+#nav-toggler:checked + label .toggler-lines::after {
+    --rotate: -90deg;
+    --translate: calc(var(--height) * -1);
+}
+
 
 /* MIMIC PAGE
 =============================================== */
@@ -1530,8 +1590,8 @@ label i {
     align-self: center;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
+.input-section-wrapper input[type="checkbox"],
+.input-section-wrapper input[type="radio"] {
     -webkit-appearance: none;
     appearance: none;
     margin: 0;
@@ -1726,6 +1786,7 @@ select {
 
 .discord-banner {
     position: relative;
+    margin-top: 3rem;
 }
 
 .discord-banner h4 {
